@@ -949,9 +949,10 @@ void ExplorerTreeView::finishLoadDatabaseContent(const proxy::events_info::LoadD
 
   proxy::events_info::LoadDatabaseContentResponce::keys_container_t keys = res.keys;
   const std::string ns = serv->GetNsSeparator();
+  core::NsDisplayStrategy ns_strategy = serv->GetNsDisplayStrategy();
   for (size_t i = 0; i < keys.size(); ++i) {
     core::NDbKValue key = keys[i];
-    source_model_->addKey(serv, res.inf, key, ns);
+    source_model_->addKey(serv, res.inf, key, ns, ns_strategy);
   }
 
   source_model_->updateDb(serv, res.inf);
@@ -1005,7 +1006,8 @@ void ExplorerTreeView::addKey(core::IDataBaseInfoSPtr db, core::NDbKValue key) {
   CHECK(serv);
 
   const std::string ns = serv->GetNsSeparator();
-  source_model_->addKey(serv, db, key, ns);
+  const core::NsDisplayStrategy ns_strategy = serv->GetNsDisplayStrategy();
+  source_model_->addKey(serv, db, key, ns, ns_strategy);
 }
 
 void ExplorerTreeView::renameKey(core::IDataBaseInfoSPtr db, core::NKey key, core::string_key_t new_name) {
