@@ -20,6 +20,8 @@
 
 #include "core/icommand_translator.h"  // for translator_t
 
+#include "core/display_strategy.h"
+
 #include "proxy/events/events.h"        // for BackupResponceEvent, etc
 #include "proxy/proxy_fwd.h"            // for IDatabaseSPtr
 #include "proxy/server/iserver_base.h"  // for IServerBase
@@ -52,6 +54,7 @@ class IServer : public IServerBase, public std::enable_shared_from_this<IServer>
 
   std::string GetDelimiter() const;
   std::string GetNsSeparator() const;
+  core::NsDisplayStrategy GetNsDisplayStrategy() const;
   IDatabaseSPtr CreateDatabaseByInfo(core::IDataBaseInfoSPtr inf);
   database_t FindDatabase(core::IDataBaseInfoSPtr inf) const;
 
