@@ -26,9 +26,14 @@ namespace proxy {
 const std::vector<const char*> supported_views_text = {"Tree", "Table", "Text"};
 
 KeyInfo::KeyInfo(const core::key_t& key, std::string ns_separator)
-    : key_(key), splited_namespaces_(), ns_separator_(ns_separator) {
+    : key_(key), splited_namespaces_(), key_name_(), ns_separator_(ns_separator) {
   common::Tokenize(key.GetHumanReadable(), ns_separator, &splited_namespaces_);
+  key_name_ = splited_namespaces_.back();
   splited_namespaces_.pop_back();
+}
+
+std::string KeyInfo::GetKeyName() const {
+  return key_name_;
 }
 
 std::string KeyInfo::GetKey() const {
